--- a/chap4-Energy_Reco.tex
+++ b/chap4-Energy_Reco.tex
@@ -1,28 +1,28 @@
 \chapter{Electromagnetic Shower Energy Reconstruction in SBND}
 \label{chap:Energy_Reco}
 
-The \gls{em} shower energy is an important quantity that is used in a number of areas especially in the context of a \nue analysis. One of the primary uses is in calculating the reconstructed electron neutrino energy, which is a key component of neutrino oscillations since the oscillation probability depends on $\frac{L}{E}$. The neutrino energy is usually found by summing up the energy of all the outgoing products of a neutrino interaction to which (for \nue \gls{ccqe} interactions) the shower energy is expected to make the dominant contribution \cite{neutrino_energy_reconstruction}. Another use is in the \nue event selection (which is detailed in \SectionRef{sec:nue_selection}) where a direct cut based on the shower energy is applied to the events.
+The \gls{em} shower energy is an important quantity that is used in a number of areas, especially in the context of a \nue analysis. One of the primary uses is in calculating the reconstructed electron neutrino energy, which is a key component of neutrino oscillations since the oscillation probability depends on $\frac{L}{E}$. The neutrino energy is usually found by summing up the energy of all the outgoing products of a neutrino interaction to which (for \nue \gls{ccqe} interactions) the shower energy is expected to make the dominant contribution \cite{neutrino_energy_reconstruction}. Another use is in the \nue event selection (which is detailed in \SectionRef{sec:nue_selection}) where a direct cut based on the shower energy is applied to the events.
 
 \section{Event Simulation and Reconstruction}\label{sec:Event Production and Reconstruction}
 
-Event simulation and analysis is performed using the \gls{larsoft} framework which interfaces with a number of other frameworks such as \gls{genie} for neutrino interaction generation, \gls{geant4} for simulated particle tracking and Pandora for pattern recognition and 3D reconstruction \cite{GENIE}\cite{Geant4_website}\cite{Geant4_paper}\cite{Pandora_paper}. \gls{larsoft} has been designed to work for many liquid argon based neutrino experiments, including the \gls{sbn} program, with many of the underlying algorithms being common to all experiments \cite{larsoft}\cite{larsoft_paper}.
+Event simulation and analysis are performed using the \gls{larsoft} framework which interfaces with a number of other frameworks such as \gls{genie} for neutrino interaction generation, \gls{geant4} for simulated particle tracking and Pandora for pattern recognition and 3D reconstruction \cite{GENIE}\cite{Geant4_website}\cite{Geant4_paper}\cite{Pandora_paper}. \gls{larsoft} has been designed to work for many liquid argon-based neutrino experiments, including the \gls{sbn} program, with many of the underlying algorithms being common to all experiments \cite{larsoft}\cite{larsoft_paper}.
 
 Reconstructed quantities are the main focus of this chapter and these are typically derived from the reconstructed charge which is obtained in the following steps;
 \begin{enumerate}
     \item Drifting electrons induce current on a wire at the anode.
-    \item Apply signal processing techniques to remove the effects of the E-field, electronics and some frequency dependent noise. 
+    \item Apply signal processing techniques to remove the effects of the E-field, electronics and some frequency-dependent noise. 
     \item A hit finding algorithm identifies any significant waveforms and classifies these as hits across a certain time window (number of ticks). 
     \item The Pandora pattern recognition software clusters the hits together such that they represent an individual particle. This is initially done in 2D, followed by matching the clusters between the wire planes in order to produce 3D clusters.
     \item The lineage of the particles is identified and the particles are classified as either track- or shower-like.
 \end{enumerate}
 
-A number of different hit finding algorithms exist, but the default one used by \gls{larsoft} is the \textit{GausHitFinder}. Once the algorithm has identified a waveform that peaks above some threshold (the threshold in \gls{sbnd} is 10 \gls{adc} counts), it attempts to fit one or more Gaussians to the waveform. For each peak, the centre and width are identified and these values are used to produce the associated Gaussian fit. For most cases the \textit{GausHitFinder} works well, but two areas where it can struggle are resolving hits which are closely spaced and fitting a Gaussian to waveforms that are not well represented by a Gaussian. The latter tends to occur when charge is directed towards the wire planes (e.g. from a shower that was produced at a large angle to the beam line instead of being mostly forward going) which causes a long pulse train on but a few wires. This results in long waveforms where the \gls{adc} count is above threshold for many ticks and is without a clear central peak. These long waveforms may be better represented by a series of N-Gaussians, however, this is still far from perfect and fitting a large number of peaks can appreciably increase computing time \cite{gaushitfinder}. \FigureRef{fig:fitted_waveforms} shows examples of some waveforms in blue along with the attempted Gaussian fit in red. The top plot shows an example waveform that is well represented by a Gaussian, whereas in the bottom plot there is a long waveform with a number of different peaks to which the \textit{GausHitFinder} has attempted to fit a single Gaussian. This long waveform is not representative of a single Gaussian and therefore the associated reconstructed charge will deviate significantly from the true value.
+A number of different hit-finding algorithms exist, but the default one used by \gls{larsoft} is the \textit{GausHitFinder}. Once the algorithm has identified a waveform that peaks above some threshold (the threshold in \gls{sbnd} is 10 \gls{adc} counts), it attempts to fit one or more Gaussians to the waveform. For each peak, the centre and width are identified and these values are used to produce the associated Gaussian fit. For most cases, the \textit{GausHitFinder} works well, but two areas where it can struggle are resolving hits which are closely spaced and fitting a Gaussian to waveforms that are not well represented by a Gaussian. The latter tends to occur when charge is directed towards the wire planes (e.g. from a shower that was produced at a large angle to the beam line instead of being mostly forward going) which causes a long pulse train on but a few wires. This results in long waveforms where the \gls{adc} count is above threshold for many ticks and is without a clear central peak. These long waveforms may be better represented by a series of N-Gaussians, however, this is still far from perfect and fitting a large number of peaks can appreciably increase computing time \cite{gaushitfinder}. \FigureRef{fig:fitted_waveforms} shows examples of some waveforms in blue along with the attempted Gaussian fit in red. The top plot shows an example waveform that is well represented by a Gaussian, whereas in the bottom plot there is a long waveform with a number of different peaks to which the \textit{GausHitFinder} has attempted to fit a single Gaussian. This long waveform is not representative of a single Gaussian and therefore the associated reconstructed charge will deviate significantly from the true value.
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width = \largefigwidth]{figures-chap4/good_gauss_fit.png}
     \includegraphics[width = \largefigwidth]{figures-chap4/bad_gauss_fit.png}
-    \caption[Example of a well and poorly fitted waveform.]{Waveforms (blue) that have been fitted with a Gaussian (red) from the \textit{GausHitFinder}. Top: an example of a waveform that is well represented by a Gaussian. Bottom: an example of waveform that is not well represented by a Gaussian.}
+    \caption[Example of a well and poorly fitted waveform.]{Waveforms (blue) that have been fitted with a Gaussian (red) from the \textit{GausHitFinder}. Top: an example of a waveform that is well represented by a Gaussian. Bottom: an example of a waveform that is not well represented by a Gaussian.}
     \label{fig:fitted_waveforms}
 \end{figure}
 
@@ -62,7 +62,7 @@ The first shower energy reconstruction method developed was the \textit{Shower L
 %    \label{fig:linear lookup curve}
 %\end{center}
 
-To estimate the reconstructed shower energy, the charge found to be associated with a shower would be used to directly read off the associated energy from the linear calibration. A further recombination correction is not required as it has already been accounted for in the charge to energy conversion. It should be noted that along with the recombination correction, hit reconstruction and pattern recognition inefficiencies are also corrected for in the calibration curve.  The \textit{Shower Linear Energy tool} has been largely disfavoured since the development of the two other reconstruction tools. 
+To estimate the reconstructed shower energy, the charge found to be associated with a shower would be used to directly read off the associated energy from the linear calibration. A further recombination correction is not required as it has already been accounted for in the charge-to-energy conversion. It should be noted that along with the recombination correction, hit reconstruction and pattern recognition inefficiencies are also corrected for in the calibration curve.  The \textit{Shower Linear Energy tool} has been largely disfavoured since the development of the two other reconstruction tools. 
 
 \begin{figure}[h!]
     \centering
@@ -74,7 +74,7 @@ To estimate the reconstructed shower energy, the charge found to be associated w
 \newpage
 
 \subsection{Number of Electrons to Energy}\label{subchap:kGeVToElectrons}
-The \textit{Shower Num Electrons Energy tool} was developed to move away from being reliant on in-house calibration curves and instead use the pre-existing calibration available in the \Gls{sbnd} portion of the \Gls{larsoft} framework. This has the advantage of being much more flexible to physics changes. For example a change in the recombination correction could be investigated by changing a single number, whereas, for the \textit{Shower Linear Energy tool}, the calibration curves would have to be regenerated. The number of electrons are found from the \gls{adc} charge and are then directly converted to energy using a scale factor which is the inverse of the energy required to ionise an argon atom. A nominal recombination value of 0.64 is assumed which is applied to all hits.
+The \textit{Shower Num Electrons Energy tool} was developed to move away from being reliant on in-house calibration curves and instead use the pre-existing calibration available in the \Gls{sbnd} portion of the \Gls{larsoft} framework. This has the advantage of being much more flexible to physics changes. For example, a change in the recombination correction could be investigated by changing a single number, whereas, for the \textit{Shower Linear Energy tool}, the calibration curves would have to be regenerated. The number of electrons are found from the \gls{adc} charge and are then directly converted to energy using a scale factor which is the inverse of the energy required to ionise an argon atom. A nominal recombination value of 0.64 is assumed which is applied to all hits.
 
 The nominal recombination value was calculated by simulating electrons whilst using a large (effectively infinite) value for the electron lifetime and setting both the transverse and longitudinal diffusion coefficients to zero. The only detector effect remaining that may impact the collected energy is the recombination effect and therefore taking the ratio between the collected and deposited energy will give a value for the recombination effect. For electrons, it was found that the recombination effect was fairly constant at a value of 0.64 across a broad range of energies \cite{recombination_0.64}. 
 
@@ -104,7 +104,7 @@ Shortcoming (don't know how much to put here? don't know if i want to emphasise 
 \subsection{ESTAR Method}
 The \textit{Shower ESTAR Energy tool} combines the ESTAR database provided by the \gls{nist} along with the Modified Box recombination model in an approach that was first used by the \Gls{argoneut} experiment \cite{ArgoNeuT_ESTAR_paper}. The ESTAR database provides the track length of electrons in various materials, including liquid argon, for energies ranging from 0.01 MeV to 1000 MeV \cite{ESTAR_Database}.
 
-$\frac{dE}{dx}$ values may be calculated by dividing the energy by the track length for each entry in the ESTAR database. The deposited charge, \textit{Q}, can then be found by using \EquationRef{eqn:ModBox} to find $\frac{dQ}{dx}$ and multiplying by the track length, \textit{dx}. This now allows the collected charge and energy to be related. If $\mathcal{E}$ in \EquationRef{eqn:ModBox} is taken to be a variable, the above process may be repeated whilst iterating over a set values of $\mathcal{E}$. This results in a 3D curve relating both the deposited charge and electric field to energy as is shown in \FigureRef{fig:ESTAR lookup curve}. The energy may then be interpolated from the collected charge and the appropriate electric field. As with the \textit{Shower Linear Energy tool}, a direct correction for recombination is not needed as it is again accounted for in the lookup curve. 
+$\frac{dE}{dx}$ values may be calculated by dividing the energy by the track length for each entry in the ESTAR database. The deposited charge, \textit{Q}, can then be found by using \EquationRef{eqn:ModBox} to find $\frac{dQ}{dx}$ and multiplying by the track length, \textit{dx}. This now allows the collected charge and energy to be related. If $\mathcal{E}$ in \EquationRef{eqn:ModBox} is taken to be a variable, the above process may be repeated whilst iterating over a set value of $\mathcal{E}$. This results in a 3D curve relating both the deposited charge and electric field to energy as is shown in \FigureRef{fig:ESTAR lookup curve}. The energy may then be interpolated from the collected charge and the appropriate electric field. As with the \textit{Shower Linear Energy tool}, a direct correction for recombination is not needed as it is again accounted for in the lookup curve. 
 
 \begin{figure}[h!]
     \centering
@@ -116,9 +116,9 @@ $\frac{dE}{dx}$ values may be calculated by dividing the energy by the track len
 \newpage
 \section{Shower Energy Reconstruction Performance}
 
-In order to assess the performance of the different reconstruction methods, a comparison with \textit{truth} information is performed. Depending on the approach, a few other inefficiencies should be considered, namely that the hit reconstruction and Pandora pattern recognition are not perfect \cite{Pandora_paper}. This results in hits missing due to not being reconstructed plus the addition of the clusters that Pandora produces being incomplete. Therefore, there are typically fewer hits than there would be if the shower in question were to be perfectly reconstructed. Reconstructing the energy of the showering particle, is desirable for a number of analyses, however, due to these issues, it is not realistic to expect agreement to within a few percent. Improving the hit reconstruction or the pattern recognition within Pandora would clearly help, but it is likely that a non-negligible bias would remain. Work on Pandora, the hit reconstruction and addressing any remaining bias is however beyond the scope of this chapter. To circumvent the inefficiencies in Pandora's pattern recognition, Pandora is run in \textit{cheating} mode, which means that truth information is used to perform the clustering. This decouples the reconstruction methods from any effects due to Pandora's pattern recognition. For comparison, a number of figures showing the reconstruction performance without using Pandora in cheating mode are shown in \AppendixRef{app:reconstruction_performance}.
+In order to assess the performance of the different reconstruction methods, a comparison with \textit{truth} information is performed. Depending on the approach, a few other inefficiencies should be considered, namely that the hit reconstruction and Pandora pattern recognition are not perfect \cite{Pandora_paper}. This results in hits missing due to not being reconstructed plus the addition of the clusters that Pandora produces being incomplete. Therefore, there are typically fewer hits than there would be if the shower in question were to be perfectly reconstructed. Reconstructing the energy of the showering particle, is desirable for a number of analyses, however, due to these issues, it is not realistic to expect agreement to be within a few per cent. Improving the hit reconstruction or the pattern recognition within Pandora would clearly help, but it is likely that a non-negligible bias would remain. Work on Pandora, the hit reconstruction and addressing any remaining bias is however beyond the scope of this chapter. To circumvent the inefficiencies in Pandora's pattern recognition, Pandora is run in \textit{cheating} mode, which means that truth information is used to perform the clustering. This decouples the reconstruction methods from any effects due to Pandora's pattern recognition. For comparison, a number of figures showing the reconstruction performance without using Pandora in cheating mode are shown in \AppendixRef{app:reconstruction_performance}.
 
-To purely gauge the performance of a given reconstruction method, it is probably best to compare the truth and reconstructed energy of a shower by only considering the available hits. This way, the reconstruction method is only validated from the available information and is additionally decoupled from hit reconstruction inefficiencies. However, additional care must be taken when using the true energy of the hits. What is considered a hit is user defined in that the width that defines a hit is a parameter that may be changed. Therefore, the true energy associated with a hit is dependant on the chosen width. Within \gls{larsoft}, the default width of a hit is $1\sigma$ which is chosen to try and find a balance between covering a sufficient amount of charge whilst still being able to resolve multiple hits which are closely spaced. The hit width considered here has been left at the default value of $1\sigma$. 
+To purely gauge the performance of a given reconstruction method, it is probably best to compare the truth and reconstructed energy of a shower by only considering the available hits. This way, the reconstruction method is only validated from the available information and is additionally decoupled from hit reconstruction inefficiencies. However, additional care must be taken when using the true energy of the hits. What is considered a hit is user defined in that the width that defines a hit is a parameter that may be changed. Therefore, the true energy associated with a hit is dependent on the chosen width. Within \gls{larsoft}, the default width of a hit is $1\sigma$ which is chosen to try and find a balance between covering a sufficient amount of charge whilst still being able to resolve multiple hits which are closely spaced. The hit width considered here has been left at the default value of $1\sigma$. 
 
 Generally, the validation is performed on a shower-hit level. This means that for a given shower, the energy of each hit is reconstructed and then summed together to obtain the energy of the shower. The exception to this is in the case of the \textit{Linear Energy tool}. During its development, it was customary to sum up the charge of all the hits and then convert to energy. This is why the calibration curve in \FigureRef{fig:linear lookup curve} has energies on the order of a shower level and not a hit level (individual hit energies are usually $\lesssim 5$ MeV) and also why it is possible to evaluate shower energies above 1000 MeV using the ESTAR method. 
 
@@ -126,7 +126,7 @@ Generally, the validation is performed on a shower-hit level. This means that fo
 
 In order to validate the reconstruction methods, an $e^- + \pi^+$ vertex sample with \gls{bnb}-like properties was produced where the electron is the showering particle. The pattern recognition is comprised of a number of steps some of which rely on the reconstructed vertex. It is therefore important to correctly reconstruct the vertex to avoid inaccuracies in the pattern recognition and it is usually easier to accurately reconstruct the vertex of an event if two particles are emanating from a single point rather than just one particle. Unless otherwise stated, all the validation has been performed using the collection plane. 
 
-The true vs reconstructed energy is shown in \FigureRef{fig:reco_vs_true_hit_level} for all three methods where the true energy has been calculated from the shower hits. The results from the \textit{Shower Linear Energy tool} and the \textit{Shower ESTAR Energy tool} are similar and show good agreement between true and reconstructed energies across the whole energy range whereas the \textit{Shower Num Electrons Energy tool} tends to overestimate the hit energies. \FigureRef{fig:reco_vs_true_showeringE} is similar, but instead the true energy is the energy of the showering electron. This gives a measure of the bias each method can expect due to the inefficiencies mentioned above. Both the \textit{Shower Linear Energy tool} and the \textit{Shower ESTAR Energy tool} underestimate the true energy of the showering electron as is expected. The \textit{Shower Num Electrons Energy tool} shows better agreement due to systematically applying a higher energy to individual hits which compensates for other inefficiencies. 
+The true vs reconstructed energy is shown in \FigureRef{fig:reco_vs_true_hit_level} for all three methods where the true energy has been calculated from the shower hits. The results from the \textit{Shower Linear Energy tool} and the \textit{Shower ESTAR Energy tool} are similar and show good agreement between true and reconstructed energies across the whole energy range whereas the \textit{Shower Num Electrons Energy tool} tends to overestimate the hit energies. \FigureRef{fig:reco_vs_true_showeringE} is similar, but instead, the true energy is the energy of the showering electron. This gives a measure of the bias each method can expect due to the inefficiencies mentioned above. Both the \textit{Shower Linear Energy tool} and the \textit{Shower ESTAR Energy tool} underestimate the true energy of the showering electron as is expected. The \textit{Shower Num Electrons Energy tool} shows better agreement due to systematically applying a higher energy to individual hits which compensates for other inefficiencies. 
 
 \begin{figure}[h!]
     \centering
@@ -156,7 +156,7 @@ The true vs reconstructed energy is shown in \FigureRef{fig:reco_vs_true_hit_lev
 \end{figure}
 
 \newpage
-A comparison of the fractional energy separation, which is defined as $\frac{Reco - True}{True}$, is shown in \FigureRef{fig:fractional_energy_resolution} for both true energies. When comparing with the true energy of the hits, the \textit{Shower ESTAR Energy tool} peaks quite tightly around zero as does the \textit{Shower Linear Energy tool}. The \textit{Shower Num Electron Energy tool} peaks to the right of the zero line again indicating that the reconstructed quantity is an overestimate. All three distributions peak to the left of the zero line when comparing with the true energy of the showering particle with the \textit{Shower Num Electrons Energy tool} giving the closest result. 
+A comparison of the fractional energy separation, which is defined as $\frac{Reco - True}{True}$, is shown in \FigureRef{fig:fractional_energy_resolution} for both true energies. When comparing with the true energy of the hits, the \textit{Shower ESTAR Energy tool} peaks quite tightly around zero as does the \textit{Shower Linear Energy tool}. The \textit{Shower Num Electron Energy tool} peaks to the right of the zero line again indicating that the reconstructed quantity is an overestimate. All three distributions peak to the left of the zero line when compared with the true energy of the showering particle with the \textit{Shower Num Electrons Energy tool} giving the closest result. 
 
 
 
@@ -173,12 +173,12 @@ To get a measure of the resolution, which is defined as the width of the distrib
 \begin{equation}
     A \exp{\left(-0.5\left(\frac{x - \mu}{\sigma}\right)^2\right)},
 \end{equation}
-is fitted to each distribution, where \textit{A} is a constant that defines the peak of the Gaussian, $\mu$ is the mean value and $\sigma^2$ is the variance. $\sigma$ is the quantity that defines the width of the Gaussian fit and will therefore also give a measure of the resolution of the associated distribution. For the distributions which use the true energy of the hits (the left plot of \FigureRef{fig:fractional_energy_resolution}), Gaussians are fitted to the entire distribution, whereas for the distributions using the true energy of the showering electron (the right plot of \FigureRef{fig:fractional_energy_resolution}), Gaussians are only fitted to the central region which encompasses the peak of the distribution. The reason for not fitting a Gaussian to the entire distribution in the second case is in order to avoid having the fit be influenced by the non Gaussian tail which is usually caused by issues in the reconstruction. Since the tail in the first case is minimal, this is not a concern and therefore a fit to the whole distribution is suitable. 
+is fitted to each distribution, where \textit{A} is a constant that defines the peak of the Gaussian, $\mu$ is the mean value and $\sigma^2$ is the variance. $\sigma$ is the quantity that defines the width of the Gaussian fit and will therefore also give a measure of the resolution of the associated distribution. For the distributions which use the true energy of the hits (the left plot of \FigureRef{fig:fractional_energy_resolution}), Gaussians are fitted to the entire distribution, whereas for the distributions using the true energy of the showering electron (the right plot of \FigureRef{fig:fractional_energy_resolution}), Gaussians are only fitted to the central region which encompasses the peak of the distribution. The reason for not fitting a Gaussian to the entire distribution in the second case is in order to avoid having the fit be influenced by the non-Gaussian tail which is usually caused by issues in the reconstruction. Since the tail in the first case is minimal, this is not a concern and therefore a fit to the whole distribution is suitable. 
 
-The Gaussian fits to the fractional energy separation distributions of each of the three reconstruction algorithms are shown in \FigureRef{fig:gauss_fit_hit_level} and \FigureRef{fig:gauss_fit_showering_e} for the comparison with the true energy of the hits and the true energy of the showering electron respectively. In order for the resolution comparisons to remain valid, the Gaussian fits in \FigureRef{fig:gauss_fit_showering_e} are produced by considering the same x-axis range size. Additionally, the binning range has been chosen such that the distribution shapes are comparable in order to minimise binning effects on the fit width whilst maintaining the same bin width for each method. The corresponding $\sigma$ values for each of the Gaussian fits is shown in \TableRef{table:gaus_fit_sigma_values}. 
+The Gaussian fits to the fractional energy separation distributions of each of the three reconstruction algorithms are shown in \FigureRef{fig:gauss_fit_hit_level} and \FigureRef{fig:gauss_fit_showering_e} for the comparison with the true energy of the hits and the true energy of the showering electron respectively. In order for the resolution comparisons to remain valid, the Gaussian fits in \FigureRef{fig:gauss_fit_showering_e} are produced by considering the same x-axis range size. Additionally, the binning range has been chosen such that the distribution shapes are comparable in order to minimise binning effects on the fit width whilst maintaining the same bin width for each method. The corresponding $\sigma$ values for each of the Gaussian fits are shown in \TableRef{table:gaus_fit_sigma_values}. 
 
 The Gaussian fits in \FigureRef{fig:gauss_fit_hit_level} for the \textit{Shower Linear Energy tool} and the \textit{Shower ESTAR Energy tool} are fairly similar with \textit{Shower Num Electrons Energy tool} having a slightly broader fit. This is likely due to the \textit{Shower Num Electrons Energy tool} systematically assigning higher energy values to each of the hits which makes event migration across bins more likely. It should be noted that the Gaussian fits will be influenced by binning artefacts in the distributions which are then mapped to the resolution. 
-The Gaussian fits for all three methods have a similar width in \FigureRef{fig:gauss_fit_showering_e}. The effect from event migration across bins likley to be  reduced due to the larger difference in energy between the sum of the hits and the showering electron. 
+The Gaussian fits for all three methods have a similar width in \FigureRef{fig:gauss_fit_showering_e}. The effect from event migration across bins is likely to be reduced due to the larger difference in energy between the sum of the hits and the showering electron. 
 
 
 \begin{figure}[h!]
@@ -244,7 +244,7 @@ Since photons also produce \gls{em} showers, a \gls{bnb}-like $\gamma + \pi^+$ s
 \clearpage
 \subsection{Performance as a Function of Angle}
 
-From a \gls{bnb} neutrino sample, most of the showers are expected to be predominantly forward going. A fraction of showers will however be directed at large angles to the beamline. As was mentioned in \SectionRef{sec:Event Production and Reconstruction}, showers directed towards the wire planes tend to produce waveforms which are not well represented by Gaussians. Since the \textit{GausHitFinder} has trouble applying a suitable fit to these cases, a degradation in the reconstruction performance is expected as a function of angle.
+From a \gls{bnb} neutrino sample, most of the showers are expected to be predominantly forward-going. A fraction of showers will however be directed at large angles to the beamline. As was mentioned in \SectionRef{sec:Event Production and Reconstruction}, showers directed towards the wire planes tend to produce waveforms which are not well represented by Gaussians. Since the \textit{GausHitFinder} has trouble applying a suitable fit to these cases, a degradation in the reconstruction performance is expected as a function of angle.
 
 In order to verify this, an  $e^- + \pi^+$ sample was produced with the electron being directed in all $\theta_{xz}$ angles. Otherwise, this sample is also \gls{bnb}-like. $\theta_{xz}$ is the angle between the beamline and the positive x-direction and is defined in terms of the \gls{sbnd} coordinate system which is shown in \FigureRef{fig:sbnd_coordinate_system}. The reconstruction performance is shown in \FigureRef{fig:reconstruction_as_a_function_of_angle} using the ESTAR method for both definitions of true energy. Profiles of the histograms in \FigureRef{fig:reconstruction_as_a_function_of_angle} are shown in \FigureRef{fig:reconstruction_as_a_function_of_angle_profile} where the y-axis error bars are the standard deviations. As is expected, a degradation in the reconstruction performance is observed in both cases as $\theta_{xz}$ tends away from $0^\circ$. It should be noted that the degradations are in opposite directions which may be explained by the fact that at large angles, the reconstruction method tends to overestimate the energy of the available hits, but the hit reconstruction also suffers, so the overall fraction of hits representing the shower is reduced. Both the \textit{Shower Linear Energy tool} and \textit{Shower Num Electrons Energy tool} have a constant recombination correction and therefore the conversion from charge to energy is linear. The \textit{Shower ESTAR Energy tool} is not perfectly linear but it is close, especially in the region up to $\mathcal{O}(10 \text{ MeV})$. Therefore, there is essentially no angular variation among the three methods so results akin to \FigureRef{fig:reconstruction_as_a_function_of_angle} for the \textit{Shower Linear Energy tool} and the \textit{Shower Num of Electrons Energy tool} would look almost identical only with the y-axis scaled appropriately. 
 \begin{figure}[h!]
@@ -285,9 +285,9 @@ In order to verify this, an  $e^- + \pi^+$ sample was produced with the electron
 
 \clearpage
 \subsection{Performance as a Function of Energy}
-The \gls{em} showers produced in \gls{sbnd} from the \gls{bnb} are expected to have energies up to around a GeV. Since the energy range is relatively broad, the reconstruction performance is evaluated as a function of the energy in order to confirm that the reconstruction methods work sufficiently well for all energies. As was the case for the angular dependence, the performance as a function of true energy is expected to not be method dependent. The only difference would be a y-axis scaling due the different reconstruction performances. 
+The \gls{em} showers produced in \gls{sbnd} from the \gls{bnb} are expected to have energies up to around a GeV. Since the energy range is relatively broad, the reconstruction performance is evaluated as a function of the energy in order to confirm that the reconstruction methods work sufficiently well for all energies. As was the case for the angular dependence, the performance as a function of true energy is expected to not be method dependent. The only difference would be a y-axis scaling due to the different reconstruction performances. 
 
-On the whole, the fractional separation is observed to be fairly constant across all energies when comparing with both the true energy of the hits and the true energy of the showering particle as can be seen in \FigureRef{fig:reconstruction_as_a_function_of_energy}. The fractional energy separation is slightly lower at the lowest energies especially when comparing with the true energy of the showering particle. This is highlighted in \FigureRef{fig:reconstruction_as_a_function_of_energy_profile} which shows the profiles of the histograms of the fractional energy separation as a function of true energy and can likely be explained by a greater fraction of the hits not passing the threshold cut. 
+On the whole, the fractional separation is observed to be fairly constant across all energies when comparing with both the true energy of the hits and the true energy of the showering particle as can be seen in \FigureRef{fig:reconstruction_as_a_function_of_energy}. The fractional energy separation is slightly lower at the lowest energies, especially when compared with the true energy of the showering particle. This is highlighted in \FigureRef{fig:reconstruction_as_a_function_of_energy_profile} which shows the profiles of the histograms of the fractional energy separation as a function of true energy and can likely be explained by a greater fraction of the hits not passing the threshold cut. 
 
 \begin{figure}[h!]
     \centering
@@ -314,7 +314,7 @@ On the whole, the fractional separation is observed to be fairly constant across
 
 The \gls{em} shower reconstruction algorithms have been demonstrated to work consistently across all three wire planes in \gls{sbnd} for showers originating from both electrons and photons. The reconstructed energy obtained from the \textit{Shower Linear Energy tool} and the \textit{Shower ESTAR Energy tool} show good agreement with the true energy of $1 \sigma$ width hits with the \textit{Shower ESTAR Energy tool} performing slightly better. The \textit{Shower Num Electrons Energy tool} systematically assigns a slightly higher energy to each of the hits. All three methods underestimate the true energy of the showering particle due to inefficiencies in the hit reconstruction plus the expected presence of an overall bias. The \textit{Shower Num Electrons Energy tool} has the closest agreement with the true energy of the showering particle due to assigning higher energies to the individual hits.
 
-The reconstruction performance is fairly consistent across all shower energies that are expected to be seen by the \gls{bnb}. There is however a slight dip in performance at the lowest energies when comparing with the true energy of the showering particle. This is due to a greater percentage of hits having energies below the threshold value. The reconstruction performance also degrades as the angle at which showers are produced to the beamline increases. This is not expected to be much of a concern as the majority of showers will be forward going. 
+The reconstruction performance is fairly consistent across all shower energies that are expected to be seen by the \gls{bnb}. There is however a slight dip in performance at the lowest energies when compared with the true energy of the showering particle. This is due to a greater percentage of hits having energies below the threshold value. The reconstruction performance also degrades as the angle at which showers are produced to the beamline increases. This is not expected to be much of a concern as the majority of showers will be forward-going. 
 
 
 
