--- a/chap5-oscillation_inputs.tex
+++ b/chap5-oscillation_inputs.tex
@@ -12,7 +12,7 @@ In order to perform an oscillation analysis, a number of inputs and analysis cho
 
 \section{Monte Carlo Event Production}
 
-The events used in this oscillation analysis are truth based with a \textit{pseudo reconstruction} applied. Work on the reconstruction is still in progress and at the time of writing has not been sufficiently completed for it to be possible to generate a fully reconstructed event sample. The pseudo reconstruction involves applying energy smearing and a series of cuts to try and emulate a fully reconstructed sample. The details of the cuts and smearing that were applied to each of the analyses are discussed in \SectionRef{sec:event_selection}.
+The events used in this oscillation analysis are truth based with a \textit{pseudo reconstruction} applied. Work on the reconstruction is still in progress and at the time of writing has not been sufficiently completed for it to be possible to generate a fully reconstructed event sample. The pseudo-reconstruction involves applying energy smearing and a series of cuts to try and emulate a fully reconstructed sample. The details of the cuts and smearing that were applied to each of the analyses are discussed in \SectionRef{sec:event_selection}.
 
 Both the events for the \numu and \nue sample were generated using \gls{genie}v3 (specifically the G18\_10a\_02\_11a tune) and then propagated through \gls{geant4} using the \gls{larsoft} framework \cite{GENIE}\cite{GENIE_V3_Paper}\cite{GENIE_tune}\cite{Geant4_website}\cite{larsoft}. For the \numu sample, this involved generating $\sim$1,000,000 intrinsic \numu events in each detector. The \nue sample is a little more involved since in addition to generating an intrinsic sample, an oscillated $\numu \rightarrow \nue$ sample, a dirt sample and a cosmic sample also needed to be produced. The oscillated sample is used to mimic the $\nue$ appearance signal whereas the dirt and cosmic samples are backgrounds. The other major background associated with a $\nue$ analysis involves $\numu$. A dedicated sample was not produced to emulate this, but instead, the events from the $\numu$ production were also run through the $\nue$ selection. Table \ref{T:nue_production} outlines the number of events produced for the \nue sample for each sub-sample for each detector. Additionally, the number of events that were selected from each sample are shown for all three detectors. The dirt events were produced with an additional filter at the generation stage which discarded any events where a shower above 10 MeV in the active volume was not present. This filter was used in order to remove any delta rays. Only about 1\% of dirt events would pass this filter so the number of dirt events used in the $\nue$ selection was $\sim$100,000. 
 
@@ -31,11 +31,11 @@ Cosmic           & $\sim$100,000    & $\sim$1 & 0 & $\sim$30
 \caption[Events generated and selected as part of the \nue sample.]{The number of events produced and selected for each sub-sample of the \nue analysis. The same number of events were produced in each of the three \gls{sbn} detectors.}
 \end{table}\label{T:nue_production}
 
-The actual number of real \numu events expected in \gls{sbnd} is well over 5 million for about 3 years of data taking \cite{sbnd_pot}. Generating this many events is not feasible as part of a \gls{mc} production, hence the above number of events were generated. The \gls{mc} events produced have an associated \gls{pot} so the number of events may be scaled to the nominal \gls{pot} of each experiment. For \gls{sbnd} and \gls{icarus} the nominal \gls{pot} is $6.6 \times 10^{20}$ which corresponds to around 3 years of data taking.  Since \gls{microboone} has already been collecting data for some time, the nominal \gls{pot} is $1.32 \times 10^{21}$. Due to scaling the generated event rate to the nominal \gls{pot} this results in non-integer number of events. %as is seen for example in \TableRef{table:sbnd_nue_event_rate}.
+The actual number of real \numu events expected in \gls{sbnd} is well over 5 million for about 3 years of data taking \cite{sbnd_pot}. Generating this many events is not feasible as part of a \gls{mc} production, hence the above number of events were generated. The \gls{mc} events produced have an associated \gls{pot} so the number of events may be scaled to the nominal \gls{pot} of each experiment. For \gls{sbnd} and \gls{icarus} the nominal \gls{pot} is $6.6 \times 10^{20}$ which corresponds to around 3 years of data taking.  Since \gls{microboone} has already been collecting data for some time, the nominal \gls{pot} is $1.32 \times 10^{21}$. Due to scaling the generated event rate to the nominal \gls{pot} this results in a non-integer number of events. %as is seen for example in \TableRef{table:sbnd_nue_event_rate}.
 
 \section{Event Reconstruction}
 
-To emulate reconstructed energies, the true energy of particles are smeared. For the \numu sample the following conditions are applied. Primary tracks (which is the leading muon in the final state) contained in the active volume, have their true energy smeared by scaling the energy with a Gaussian which has a standard deviation of 0.02. If the primary track is not contained, the energy is instead smeared by a Gaussian with a standard deviation that is given by $-A\lnOfbraces{BL}$,
+To emulate reconstructed energies, the true energy of particles are smeared. For the \numu sample, the following conditions are applied. Primary tracks (which is the leading muon in the final state) contained in the active volume, have their true energy smeared by scaling the energy with a Gaussian which has a standard deviation of 0.02. If the primary track is not contained, the energy is instead smeared by a Gaussian with a standard deviation that is given by $-A\lnOfbraces{BL}$,
 where \textit{L} is the track length and $A = 0.102$ and $B = 0.000612$ cm$^{-1}$ \cite{SBN_Proposal}. This emulates the multiple scatterings of the track, but in order for the track to have sufficient resolution, a minimum track length of 100 cm is required. Parameters \textit{A} and \textit{B} were chosen based on the work of \cite{ICARUS_muon_smearing}. Non-primary tracks with a true energy of less than 21 MeV are removed (21 MeV is the kinetic energy threshold for reconstructing tracks \cite{SBN_Proposal}) and any remaining tracks are smeared with a Gaussian which has a standard deviation of 0.05 \cite{SBN_Proposal}. An additional condition that the minimum smeared energy is 0 MeV is applied which ensures that negative energies do not occur.
 
 The values used to determine the degree of energy smearing for the \nue sample are different to the \numu sample. The energy of electron and photon showers are smeared with a Gaussian that has a standard deviation of $0.15/\sqrt{E_{true}}$. Contained muons are smeared with a Gaussian that has a standard deviation of 0.15 whereas the smearing of non-contained muons is not considered. Finally, the hadrons are smeared with a Gaussian that has a standard deviation of 0.05. The same condition ensuring that negative energies are not allowed is again applied. A check is also performed to see if there is more than 50 MeV of hadronic activity at the vertex, which is the threshold for the vertex to be considered visible \cite{SBN_Proposal}. Additionally, the reconstruction is assumed to only be sufficiently accurate for showers above 200 MeV, therefore any events with showers that do not exceed this energy threshold are removed. 
@@ -71,9 +71,9 @@ The event selections are performed in order to first identify \numu or \nue-like
 
 \subsection{\texorpdfstring{\nue Selection}{nue Selection}}\label{sec:nue_selection}
 
-The $\nue$ selection follows a similar basis to the $\numu$ selection described in section \ref{sec:numu_selection}, however, different criteria for the selection were applied to beam induced TPC events, dirt events and cosmic events, each of which are outlined below. 
+The $\nue$ selection follows a similar basis to the $\numu$ selection described in section \ref{sec:numu_selection}, however, different criteria for the selection were applied to beam-induced TPC events, dirt events and cosmic events, each of which are outlined below. 
 
-\subsubsection*{Beam induced active volume events}
+\subsubsection*{Beam-induced active volume events}
 
 \begin{enumerate}
   \item Remove any events whose interaction vertex is not located in the fiducial volume. The fiducial volume used is outlined in \TableRef{table:active_and_fiducial_volumes}.
@@ -87,7 +87,7 @@ to account for an assumed 80\% reconstruction efficiency \cite{Dom's_thesis}.
 \end{enumerate}
 
 \subsubsection*{Dirt Events}
-The selection procedure for dirt events is similar to that of beam induced events outlined above. However, since the vertex for dirt events occurs outside the detector volume, the conversion gap and muon track length cuts are not undertaken \cite{Dom's_thesis}.
+The selection procedure for dirt events is similar to that of beam-induced events outlined above. However, since the vertex for dirt events occurs outside the detector volume, the conversion gap and muon track length cuts are not undertaken \cite{Dom's_thesis}.
 
 \subsubsection*{Cosmic Events}
 A largely separate analysis is applied for cosmic events which is as follows:
@@ -168,7 +168,7 @@ The reaction modes define the topology of neutrino interactions. Categorising ne
 \section{Systematic Uncertainties}\label{sec:syst_uncertainties}
 A number of uncertainties associated with the neutrino flux, neutrino interactions and detector effects have to be considered. Within the simulation, predictions on the event rate and the properties of an event are required to reflect changes in these uncertainty parameters. 
 
-The majority of flux and interaction systematic parameters considered are implemented using well validated reweighting schemes provided by \gls{microboone} and \gls{genie} respectively (the two exceptions are the \gls{pot} normalisation and \gls{2p2h} uncertainty) \cite{BNB_flux}\cite{GENIE_manual}. For each \gls{mc} event and systematic parameter included in the reweight schemes, \textit{universes} are simulated where the given parameter is randomly varied within its limits. Each universe will therefore have a single parameter which is tweaked from its nominal value and for each parameter, 500 universes are simulated each with a different tweaked value for the parameter. This allows changes in event rate spectra to be related to systematic parameter variations. The systematic parameters considered are described below along with a table quoting their estimated uncertainty. 
+The majority of flux and interaction systematic parameters considered are implemented using well-validated reweighting schemes provided by \gls{microboone} and \gls{genie} respectively (the two exceptions are the \gls{pot} normalisation and \gls{2p2h} uncertainty) \cite{BNB_flux}\cite{GENIE_manual}. For each \gls{mc} event and systematic parameter included in the reweight schemes, \textit{universes} are simulated where the given parameter is randomly varied within its limits. Each universe will therefore have a single parameter which is tweaked from its nominal value and for each parameter, 500 universes are simulated each with a different tweaked value for the parameter. This allows changes in event rate spectra to be related to systematic parameter variations. The systematic parameters considered are described below along with a table quoting their estimated uncertainty. 
 
 Currently, uncertainties due to detector effects remain largely unconstrained and therefore a dedicated package describing their effects does not exist. They are instead handled internally and are described in \SectionRef{sec:efficiency_syst}. 
 
@@ -179,7 +179,7 @@ Currently, uncertainties due to detector effects remain largely unconstrained an
 The flux systematics are grouped into 3 distinct sets with different origins as part of the \gls{microboone} reweight scheme which are detailed below plus the additional \gls{pot} normalisation. 
 
 \subsubsection*{Optical Flux Systematics}
-The optical flux systematics are comprised of two parameters: the \textit{skin effect} and the \textit{horn current}. The horn current parameter is simply the uncertainty of the supplied current to the focusing horn. Since the current is linked to the focusing properties of the horn, uncertainty on the current leads to an uncertainty on the neutrino flux. The focusing horn is surrounded by a conductor where currents travel on the surface of the conductor. The skin effect is a measure of how much these surface currents penetrate into the conductor which in turn affects the internal fields of the conductor. Therefore, due to the skin effect, the strength of the magnetic field that particles propagating through the horn experience may vary \cite{BNB_flux}.
+The optical flux systematics are comprised of two parameters: the \textit{skin effect} and the \textit{horn current}. The horn current parameter is simply the uncertainty of the supplied current to the focusing horn. Since the current is linked to the focusing properties of the horn, uncertainty on the current leads to an uncertainty in the neutrino flux. The focusing horn is surrounded by a conductor where currents travel on the surface of the conductor. The skin effect is a measure of how much these surface currents penetrate into the conductor which in turn affects the internal fields of the conductor. Therefore, due to the skin effect, the strength of the magnetic field that particles propagating through the horn experience may vary \cite{BNB_flux}.
 
 \begin{table}[!h]
   \renewcommand{\arraystretch}{1.4}    
@@ -288,7 +288,7 @@ The uncertainties associated with neutrino interactions are provided by GENIE an
 \end{equation}
 where $\delta P$ represents the standard deviation of \textit{P}. It follows from \EquationRef{eqn:genie_reweight} that for a $x_P = 0$, $P' = P$ and for $x_P = \pm 1$, $P' = P \pm \delta P$.
 
-The two main types of interaction systematics considered in this analysis are cross-section and intranuclear hadron transport model uncertainties, however, within an \gls{sbn} analysis, the interaction systematics are generally grouped into two categories: the \textit{propsal} and \textit{modern} set of parameters. The proposal systematics are those that were included as part of the analysis done at the time of the \gls{sbn} proposal, whereas the modern systematics represent the additional systematics which have been deemed relevant for \gls{sbn} in the period following the proposal \cite{SBN_Proposal}. The details of how GENIE handles cross-section and intranuclear hadron transport parameters is detailed below, followed by outlining which parameters are included as part of the proposal and modern set of parameters.
+The two main types of interaction systematics considered in this analysis are cross-section and intranuclear hadron transport model uncertainties, however, within an \gls{sbn} analysis, the interaction systematics are generally grouped into two categories: the \textit{propsal} and \textit{modern} set of parameters. The proposal systematics are those that were included as part of the analysis done at the time of the \gls{sbn} proposal, whereas the modern systematics represent the additional systematics which have been deemed relevant for \gls{sbn} in the period following the proposal \cite{SBN_Proposal}. The details of how GENIE handles cross-section and intranuclear hadron transport parameters are detailed below, followed by outlining which parameters are included as part of the proposal and modern set of parameters.
 
 \subsubsection*{Neutrino Cross-Section uncertainties}
 
@@ -412,7 +412,7 @@ The proposal systematics only included a set of cross-section parameters which a
 \newpage
 \subsection*{\textit{Modern} Interaction Systematics}
 
-The modern systematics include an additonal set of cross-section parameters which are listed in \TableRef{table:modern_xsec_syst} in addition to a set of intranuclear hadron transport parameters which are listed in \TableRef{table:modern_intranuclear_syst}. Again, both tables also show the associated uncertainty of each parameter. The \gls{2p2h} uncertainty mentioned is also considered as part of the modern systematic parameters and is detailed below. 
+The modern systematics include an additional set of cross-section parameters which are listed in \TableRef{table:modern_xsec_syst} in addition to a set of intranuclear hadron transport parameters which are listed in \TableRef{table:modern_intranuclear_syst}. Again, both tables also show the associated uncertainty of each parameter. The \gls{2p2h} uncertainty mentioned is also considered as part of the modern systematic parameters and is detailed below. 
 
 \begin{table}[h!]
     \renewcommand{\arraystretch}{1.4}
@@ -521,7 +521,7 @@ where $C_{ij}$ represents the correlation between the off-diagonal elements and 
   \end{cases}
 \end{equation}
 with $\sigma_i^{\prime}$ again being a percentage error. 
-If any correlated errors are assumed to by fully correlated, $\mathcal{M}_{ij}$ will then have diagonal elements given by $\sigma_i^2 + \sigma_i^{\prime2}$ and off diagonal elements given by $\sigma_i^2$.
+If any correlated errors are assumed to by fully correlated, $\mathcal{M}_{ij}$ will then have diagonal elements given by $\sigma_i^2 + \sigma_i^{\prime2}$ and off-diagonal elements given by $\sigma_i^2$.
 
 \begin{table}[h!]
 \begin{adjustbox}{width=\textwidth,center}
@@ -556,7 +556,7 @@ All future discussion involving correlated uncertainties should from here on be 
     \includegraphics[width = 0.49\textwidth]{figures-chap5/efficiency_matrices/efficiency_error_matrix_48x48_type2_cor2.00pct_sbnduncor1.00pct_ubooneuncor1.00pct_icarusuncor1.00pct.root.pdf}
     \includegraphics[width = 0.49\textwidth]{figures-chap5/efficiency_matrices/efficiency_error_matrix_48x48_type2_cor2.00pct_sbnduncor2.00pct_ubooneuncor0.50pct_icarusuncor0.50pct.root.pdf}
     \includegraphics[width = 0.49\textwidth]{figures-chap5/efficiency_matrices/efficiency_error_matrix_48x48_type3_cor2.00pct_bulkuncor0.50pct_allpeakEnumuCCuncor2.00pct.root.pdf}
-    \caption[Example efficiency uncertainty covariance matrices.]{Covariance matrices produced to investigate the effects of efficiency systematics for the \numu disappearance channel. Top left: A 10\% fully correlated error only. Top right: A 2\% fully correlated error with an additional 1\% uncorrelated error across all bins. Bottom left: A 2\% fully correlated error with an additional 2\% uncorrelated error for all \gls{sbnd} bins and a 0.5\% uncorrelated error for all \gls{microboone} and \gls{icarus} bins. Bottom right: A 2\% fully correlated error with and additional 2\% uncorrelated error for the peak energy bins (0.6 - 1.0 GeV) in each detector and a 0.5\% uncorrelated error for all other bins.}
+    \caption[Example efficiency uncertainty covariance matrices.]{Covariance matrices produced to investigate the effects of efficiency systematics for the \numu disappearance channel. Top left: A 10\% fully correlated error only. Top right: A 2\% fully correlated error with an additional 1\% uncorrelated error across all bins. Bottom left: A 2\% fully correlated error with an additional 2\% uncorrelated error for all \gls{sbnd} bins and a 0.5\% uncorrelated error for all \gls{microboone} and \gls{icarus} bins. Bottom right: A 2\% fully correlated error with an additional 2\% uncorrelated error for the peak energy bins (0.6 - 1.0 GeV) in each detector and a 0.5\% uncorrelated error for all other bins.}
     \label{fig:efficiency_cov_matrices}
 \end{figure}
 
