--- a/chap7-conclusion.tex
+++ b/chap7-conclusion.tex
@@ -3,7 +3,7 @@
 
 The three \gls{sbn} detectors are expected to provide a rich physics programme, with the main aims being to confirm or refute the possible existence of light sterile neutrinos, investigate neutrino-argon interactions and to develop large scale \gls{lartpc} technologies. Both the \gls{microboone} and \gls{icarus} detectors are currently taking data and the full \gls{sbn} program is expected to come online in early 2024 once \gls{sbnd} is ready to also take data. 
 
-In this thesis, the development of two new \gls{em} shower reconstruction algorithms have been presented along with the necessary inputs and results from an oscillation analysis within \gls{sbn}. The oscillation analysis focuses on the \nue appearance and disappearance channels and uses a modern set of inputs which better reflect the actual \gls{sbn} program and the relevant physics than what was used in the \gls{sbn} proposal.
+In this thesis, the development of two new \gls{em} shower reconstruction algorithms have been presented along with the necessary inputs and results from an oscillation analysis within \gls{sbn}. The oscillation analysis focuses on the \nue appearance and disappearance channels and uses a modern set of inputs that better reflect the actual \gls{sbn} program and the relevant physics than what was used in the \gls{sbn} proposal.
 
 Both the \textit{Shower Num Electrons Energy tool} and the \textit{Shower ESTAR Energy tool} have been newly developed to work within \gls{sbnd}. The \textit{Shower Num Electrons Energy tool} uses a nominal recombination factor and the pre-existing calibration within \gls{sbnd} that allows for the conversion of charge in \gls{adc} units to the number of electrons. This approach is much more flexible to physics changes than the previous algorithm, the \textit{Shower Linear Energy tool}, which relied on in-house calibration curves produced from \gls{mip} muons. The \textit{Shower ESTAR Energy tool} combines the modified box recombination model with the ESTAR database provided by NIST. This allows for the creation of a lookup curve relating the number of electrons to energy. In both tools, the charge associated with the hits is found and converted to energy using the respective method and the energy of all the hits is summed to find the total energy of the shower. All the reconstruction algorithms have been validated against truth information using events across the energy spectrum of the \gls{bnb}. Assuming a $1\sigma$ hit width when calculating the true energy of the hits, it has been demonstrated that the \textit{Shower ESTAR Energy tool} shows minimal bias in the reconstructed energy. The \textit{Shower Num Electrons Energy tool} systematically applies a larger energy to all of the hits and therefore tends to overestimate the reconstructed hit energy. When comparing with the true energy of the showering particle, all methods underestimate the energy due to hit reconstruction inefficiencies and the expectation of an overall bias. The bias observed by \textit{Shower ESTAR Energy tool} is of the order $-20\%$ and since the \textit{Shower Num Electrons Energy tool} applies higher energies to the hits, the bias is a little smaller at around the $-10\%$ level.
 
